--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Change log for gocept.jsform
 ============================
 
+3.0.1 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 3.0.0 (2016-02-03)
 ==================
 
