--- a/HACKING.txt
+++ b/HACKING.txt
@@ -1,3 +1,4 @@
+
 Developing for gocept.jsform
 ============================
 
@@ -32,6 +33,7 @@ You can install the Sphinx package in your site packages or virtual environment
 using pip::
 
     $ pip install sphinx
+    $ pip install sphinxcontrib-autoanysrc
 
 
 Releases
