--- a/HACKING.txt
+++ b/HACKING.txt
@@ -32,8 +32,7 @@ Build the documentation with::
 You can install the Sphinx package in your site packages or virtual environment
 using pip::
 
-    $ pip install sphinx
-    $ pip install sphinxcontrib-autoanysrc
+    $ pip install -r docs/requirements.txt
 
 
 Releases
