Document to update submodules before bulding doc.

--- a/HACKING.txt
+++ b/HACKING.txt
@@ -26,6 +26,7 @@ needs.
 
 Build the documentation with::
 
+    $ git submodule update --init --recursive
     $ cd docs && make html
     $ open index.html
 
