--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,10 @@
 Changelog
 =========
 
-4.0.1 (unreleased)
+4.0.1 (2016-03-17)
 ==================
 
-- Nothing changed yet.
+- Fix wrong dependency url in `bower.json`.
 
 
 4.0.0 (2016-03-17)
