--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 4.0.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Pin npm versions to make dev deployments more stable.
 
 
 4.0.1 (2016-03-17)
