--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,10 @@ Changelog
 
 - Pin npm versions to make dev deployments more stable.
 
+- Fix failing tests.
+  Two tests did not have any expectations, five had some async problems that
+  were now fixed, one was not fixed and is skipped for now.
+
 
 4.0.1 (2016-03-17)
 ==================
